@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.14.4
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fix creating entities when there are items on the ground.
 ---------------------------------------------------------------------------------------------------
 Version: 0.14.3
 Date: 2022-11-13
